[gd_scene load_steps=5 format=3 uid="uid://dowvcw5pjqig8"]

[ext_resource type="Script" uid="uid://co5jxdi8y8m3k" path="res://scripts/player/player.gd" id="1_8afob"]
[ext_resource type="Texture2D" uid="uid://bisq5s8aruq2j" path="res://assets/sprites/sprites/player.png" id="2_dovo2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 37.6563

[sub_resource type="CircleShape2D" id="CircleShape2D_x7p2l"]
radius = 130.231

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
position = Vector2(377, 728)
collision_mask = 20
script = ExtResource("1_8afob")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -1
limit_right = 768
limit_bottom = 1020
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(4, 4)
texture = ExtResource("2_dovo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_dovo2")

[node name="hand_marker" type="Marker2D" parent="."]
position = Vector2(0, -83)

[node name="pickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupArea"]
shape = SubResource("CircleShape2D_x7p2l")
debug_color = Color(0.700634, 0.366549, 0.834473, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="boost_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="boost_timer" to="." method="_on_boost_timer_timeout"]
